--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,8 @@ textarea {
   border-radius: 12px;
   border: 1px solid #383838;
   color: #fff;
-  font-family: 'Pretendard600';
+  font-family: 'Pretendard';
+  font-weight: 600;
   font-size: 12px;
   font-style: normal;
   line-height: normal;
