--- a/src/components/create/FreeForm.scss
+++ b/src/components/create/FreeForm.scss
@@ -1,11 +1,11 @@
-.music_create.freeform-mode {
+.music_create.freeform-mode{
   height: 100%;
 }
-.freeform-section {
+.freeform-section{
   // height: 100vh;
   width: 100%;
   padding: 30px 0;
-  &__inner {
+  &__inner{
     padding: 24px 2%;
     display: flex;
     flex-direction: column;
@@ -13,50 +13,65 @@
     margin-bottom: 24px;
     border-radius: 20px;
     border: 1px solid rgba(255, 255, 255, 0.2);
-    &__tit {
+    &__tit{
       display: flex;
       flex-direction: column;
       align-items: center;
       row-gap: 8px;
-      img {
+      img{
         width: 100%;
         max-width: 72px;
       }
-      h2 {
+      h2{
         color: #fff;
         font-weight: 700;
         font-size: clamp(16px, 2vw, 20px);
         line-height: clamp(24px, 3vw, 30px);
       }
-      p {
+      p{
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 4px;
         font-size: clamp(12px, 1.2vw, 14px);
         line-height: clamp(18px, 1.8vw, 22px);
-        span {
+        span{
           color: #767676;
         }
       }
     }
-    &__textarea {
+    &__textarea-box{
+      position: relative;
+      .chat-count{
+        position: absolute;
+        right: 20px;
+        bottom: 20px;
+        font-size: clamp(12px, 0.9vw, 14px);
+        padding: 4px 12px;
+        background-color: rgba(0, 0, 0, 0.70);
+        border-radius: 20px;
+        cursor: default;
+      }
+    }
+    &__textarea{
       padding: 20px;
       height: 45vh;
       min-height: 300px;
       resize: none;
       font-size: clamp(12px, 1.2vw, 14px);
       line-height: clamp(18px, 1.8vw, 22px);
+      font-weight: 400;
       border: 1px solid rgba(255, 255, 255, 0.2);
-      &::placeholder {
+      &::placeholder{
         font-size: clamp(12px, 1.2vw, 14px);
         color: #767676;
+        font-weight: 400;
       }
-      &:focus::placeholder {
+      &:focus::placeholder{
         visibility: hidden;
       }
     }
-    .btn-lyrics-modal {
+    .btn-lyrics-modal{
       display: flex;
       align-items: center;
       column-gap: 8px;
@@ -67,10 +82,10 @@
       width: fit-content;
     }
   }
-  .btn-full-box {
+  .btn-full-box{
     text-align: center;
   }
-  .btn-full-primary {
+  .btn-full-primary{
     width: 100%;
     display: flex;
     padding: 16px;
@@ -81,12 +96,12 @@
     border-radius: 12px;
     font-size: clamp(16px, 1.6vw, 18px);
     font-weight: 700;
-    &--disabled {
+    &--disabled{
       background-color: #303030;
       color: #4b4b4b;
       pointer-events: none;
     }
-    &--active {
+    &--active{
       background-color: #cf0;
       color: #000;
     }
@@ -94,7 +109,7 @@
 }
 
 // custom-lyrics modal START
-.custom-lyrics-modal {
+.custom-lyrics-modal{
   position: fixed;
   inset: 0;
   z-index: 1000;
@@ -102,7 +117,7 @@
   align-items: center;
   justify-content: center;
 
-  &__bg {
+  &__bg{
     position: absolute;
     inset: 0;
     background-color: rgba(0, 0, 0, 0.7);
@@ -111,7 +126,7 @@
     transition: opacity 0.2s ease;
   }
 
-  &__box {
+  &__box{
     position: relative;
     z-index: 10;
     width: calc(100% - 30px);
@@ -130,31 +145,31 @@
     transform: scale(0.95);
     transition: opacity 0.2s ease, transform 0.2s ease;
 
-    &__tit {
+    &__tit{
       display: flex;
       justify-content: space-between;
       align-items: center;
 
-      h3 {
+      h3{
         font-size: clamp(16px, 1.8vw, 20px);
         font-weight: 700;
         color: #fff;
       }
 
-      .btn-close {
+      .btn-close{
         background: transparent;
         border: none;
         padding: 0;
         cursor: pointer;
 
-        img {
+        img{
           width: 20px;
           height: 20px;
         }
       }
     }
 
-    &__textarea {
+    &__textarea{
       width: 100%;
       min-height: 40vh;
       padding: 16px 0;
@@ -165,23 +180,23 @@
       font-size: clamp(12px, 1.2vw, 14px);
       line-height: clamp(18px, 1.8vw, 22px);
 
-      &::placeholder {
+      &::placeholder{
         color: #767676;
       }
 
-      &:focus::placeholder {
+      &:focus::placeholder{
         visibility: hidden;
       }
     }
   }
 
-  &.open {
-    .custom-lyrics-modal__bg {
+  &.open{
+    .custom-lyrics-modal__bg{
       opacity: 1;
       visibility: visible;
     }
 
-    .custom-lyrics-modal__box {
+    .custom-lyrics-modal__box{
       opacity: 1;
       visibility: visible;
       transform: scale(1);
@@ -189,7 +204,7 @@
   }
 }
 // custom-lyrics modal btn START
-.lyrics-modal__btn {
+.lyrics-modal__btn{
   width: 100%;
   padding: 12px;
   border-radius: 8px;
@@ -200,13 +215,13 @@
   border: 1px solid transparent;
   pointer-events: none;
 
-  &--active {
+  &--active{
     background: #cf0;
     color: #000;
     pointer-events: auto;
   }
 
-  &--editing {
+  &--editing{
     background-color: rgba(255, 255, 255, 0.05);
     border-color: rgba(255, 255, 255, 0.2);
     color: #fff;
@@ -214,3 +229,89 @@
   }
 } // custom-lyrics modal btn END
 // custom-lyrics modal END
+
+// custom-toggle START
+.custom-toggle{
+  margin-bottom: clamp(12px, 1.1vw, 16px);
+  .switch{
+    position: relative;
+    display: inline-block;
+    width: 54px;
+    height: 30px;
+    vertical-align: middle;
+
+    input{
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+    .slider{
+      position: absolute;
+      cursor: pointer;
+      inset: 0;
+      background-color: rgba(255, 255, 255, 0.10);
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
+    .slider::before{
+      position: absolute;
+      content: '';
+      width: 24px;
+      height: 24px;
+      left: 3px;
+      top: 3px;
+      background-color: #22A3FF;
+      -webkit-transition: .3s;
+      transition: .3s;
+    }
+    input:checked + .slider{
+      background-color: #2196F3;
+    }
+
+    input:checked + .slider:before{
+      -webkit-transform: translateX(24px);
+      -ms-transform: translateX(24px);
+      transform: translateX(24px);
+      background-color: #fff;
+    }
+    .slider.round{
+      border-radius: 34px;
+    }
+
+    .slider.round:before{
+      border-radius: 50%;
+    }
+  }
+  .custom-mode-txt{
+    color: #a8a8a8;
+    font-size: clamp(14px, 1.1vw, 16px);
+    line-height: clamp(22px, 1.6vw, 24px);
+    font-weight: 400;
+    margin-left: clamp(8px, 1.1vw, 16px);
+    transition: all 0.2s ease;
+  }
+}
+.custom-toggle.is-on .custom-mode-txt {
+  color: #fff;
+  font-weight: 700;
+}
+
+@media (max-width: 1000px) {
+  .custom-toggle{
+    .switch {
+      width: 48px;
+      height: 26px;
+      .slider::before {
+        width: 22px;
+        height: 22px;
+        left: 3px;
+        top: 2px;
+      }
+
+      input:checked + .slider:before {
+        transform: translateX(20px);
+      }
+    }
+  }
+}
+// custom-toggle END
